# haskellrustlink

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cabal.project  haskellrustlink.cabal
app/: Ext.hs  Main.hs
ext/hello/: Cargo.toml
ext/hello/src/: lib.rs
extlib/: Extlib.hs
extlib/Extlib/: Internal.hs
extlib/hello/: Cargo.toml
src/: Lib.hs
