cabal-version:      2.4
name:               haskellrustlink
version:            0.1.0.0
synopsis:           A small program to iterate on linking Haskell with Rust statically.
license:            Apache-2.0
author:             Jessica Black
maintainer:         me@jessica.black
extra-source-files: CHANGELOG.md
build-type:         Simple

executable haskellrustlink
  main-is:            Main.hs
  build-depends:      base ^>=4.15.1.0
  hs-source-dirs:     app
  default-language:   Haskell2010
  other-modules:      Ext
  extra-libraries:    rusthello, pthread
  extra-lib-dirs:     /Users/jessica/projects/scratch/haskellrustlink/target/release
  ghc-options:        -I/Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include/ffi -I/opt/homebrew/include -L/opt/homebrew/lib

library
  hs-source-dirs:     app
  exposed-modules:    Ext
  build-depends:      base ^>=4.15.1.0
  default-language:   Haskell2010
  extra-libraries:    rusthello, pthread
  extra-lib-dirs:     /Users/jessica/projects/scratch/haskellrustlink/target/release
  ghc-options:        -I/Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include/ffi -I/opt/homebrew/include -L/opt/homebrew/lib
